Half completed component method firing.

--- a/TodoAppA1/app/app.component.html
+++ b/TodoAppA1/app/app.component.html
@@ -1,5 +1,5 @@
-﻿<header>
-	<div class="cotainer-fluid">
+﻿<header class="cotainer-fluid">
+	<div class="cotainer">
 		<nav class="navbar navbar-default" role="navigation">
 			<div class="navbar-header">
 				<button type="button" class="navbar-toggle" ng-click="isNavCollapsed = !isNavCollapsed">
