--- a/TodoAppA1/app/todo-item/todo-item.component.html
+++ b/TodoAppA1/app/todo-item/todo-item.component.html
@@ -2,13 +2,16 @@
 	<form class="form-inline form-group">
 	  <div class="form-group">
 	    <i class="glyphicon glyphicon-plus-sign" ng-click="todoItem.addSubItem(todoItem.item)"></i>
-	    <i class="glyphicon glyphicon-floppy-saved" ng-click="todoItem.save(todoItem.item)"></i>
-	    <i class="glyphicon glyphicon-edit" ng-click="todoItem.edit(todoItem.item)"></i>
-	    <i class="glyphicon glyphicon-floppy-remove" ng-click="todoItem.remove(todoItem.item)"></i>
+	    <i class="glyphicon glyphicon-floppy-saved" ng-click="todoItem.save({value: todoItem.item})"></i>
+	    <i class="glyphicon glyphicon-edit" ng-click="todoItem.edit({value: todoItem.item})"></i>
+	    <i class="glyphicon glyphicon-floppy-remove" ng-click="todoItem.remove({value: todoItem.item})"></i>
 	    <input type="text" class="form-control" ng-model="todoItem.item.Name" />
 	  </div>
 	</form>
 	<div class="col-sm-12" style="margin: 0 10px 0;">
-		<todo-list items="todoItem.item.subItems"></todo-list>
+		<todo-list items="todoItem.item.subItems"
+			change-add-enable="main.changeAddEnable({value: value})"
+			change-edit-enable="main.changeEditEnable({value: value})">
+		</todo-list>
 	</div>
 </div>
