todo-list => todo-item communication
1. Added todo-list-wrapper directive for method reuse.
2. Added `use strict` to each file.

--- a/TodoAppA1/app/app.component.html
+++ b/TodoAppA1/app/app.component.html
@@ -22,10 +22,11 @@
 <section>
 	<div class="container">
 		<todo-list 
-			add-enable="main.addEnable" edit-enable="main.editEnable"  
+			add-enable="main.addEnable" 
+			edit-enable="main.editEnable"  
 			items="main.list"
-			change-add-enable="main.changeAddEnable(value)"
-			change-edit-enable="main.changeEditEnable(value)">
+			change-add-enabled="main.changeAddEnabled(value)"
+			change-edit-enabled="main.changeEditEnabled(value)">
 		</todo-list>
 	</div>
 </section>
