--- a/TodoAppA1/Views/Home/Index.cshtml
+++ b/TodoAppA1/Views/Home/Index.cshtml
@@ -9,6 +9,7 @@
 <script src="/app/todo-list/todo-list.controller.js"></script>
 <script src="/app/todo-item/todo-item.component.js"></script>
 <script src="/app/todo-item/todo-item.controller.js"></script>
+<script src="/app/service/todo-list-helper.service.js"></script>
 <script src="/app/app.controller.js"></script>
 <script src="/app/app.component.js"></script>
 <script src="/app/app.js"></script>
