--- a/TodoAppA1/app/app.component.html
+++ b/TodoAppA1/app/app.component.html
@@ -23,10 +23,7 @@
 	<div class="container">
 		<todo-list 
 			add-enable="main.addEnable" 
-			edit-enable="main.editEnable"  
-			items="main.list"
-			change-add-enabled="main.changeAddEnabled(value)"
-			change-edit-enabled="main.changeEditEnabled(value)">
+			items="main.list">
 		</todo-list>
 	</div>
 </section>
