--- a/TodoAppA1/app/todo-list/todo-list.component.html
+++ b/TodoAppA1/app/todo-list/todo-list.component.html
@@ -1,10 +1,6 @@
-﻿<div class="todo-list">
+﻿<ul class="list-group">
 	<todo-item 
 		ng-repeat="item in todoList.items" 
-		item="item" 
-		add-enable="todoList.addEnable" 
-		edit-enable="todoList.editEnable"
-		change-add-enabled="todoList.changeAddEnabled(value)"
-		change-edit-enabled="todoList.changeEditEnabled(value)">
+		item="item">
 	</todo-item>
-</div>
+</ul>
