Changed to min files & commented footer.

--- a/TodoAppA1/app/app.component.html
+++ b/TodoAppA1/app/app.component.html
@@ -27,6 +27,9 @@
 		</todo-list>
 	</div>
 </section>
-<footer>
-	Here is simple Footer
-</footer>
+<!--<footer class="container">
+	<div style="background-color: #f8f8f8;">
+		Here is simple Footer
+
+	</div>
+</footer>-->
