--- a/TodoAppA1/Views/Home/Index.cshtml
+++ b/TodoAppA1/Views/Home/Index.cshtml
@@ -5,10 +5,10 @@
 	}
 </style>
 
-<script src="/scripts/angular.js"></script>
-<script src="/scripts/angular-animate.js"></script>
-<script src="/scripts/angular-ui/ui-bootstrap.js"></script>
-<script src="/scripts/angular-ui-router.js"></script>
+<script src="/scripts/angular.min.js"></script>
+<script src="/scripts/angular-animate.min.js"></script>
+<script src="/scripts/angular-ui/ui-bootstrap.min.js"></script>
+<script src="/scripts/angular-ui-router.min.js"></script>
 <script src="/app/app.module.js"></script>
 <script src="/app/todo-list/todo-list.component.js"></script>
 <script src="/app/todo-list/todo-list.controller.js"></script>
