Added title to button & navbar position fix.

--- a/TodoAppA1/app/todo-item/todo-item.component.html
+++ b/TodoAppA1/app/todo-item/todo-item.component.html
@@ -3,18 +3,22 @@
 		<fieldset ng-disabled="!todoItem.crud.addEnable && !todoItem.item.edit">
 			<span class="form-group">
 				<button ng-if="todoItem.crud.addEnable" 
+					title="Add sub item"
 					class="glyphicon glyphicon-plus-sign btn btn-sm" 
 					ng-click="todoItem.crud.addSubItem(todoItem.item)">
 				</button>
 				<button ng-if="todoItem.item.edit" 
+					title="Save"
 					class="glyphicon glyphicon-floppy-saved btn btn-sm" 
 					ng-click="todoItem.crud.save(todoItem.item)">
 				</button>
 				<button ng-if="todoItem.crud.addEnable" 
+					title="Edit"
 					class="glyphicon glyphicon-edit btn btn-sm" 
 					ng-click="todoItem.crud.edit(todoItem.item)">
 				</button>
 				<button ng-if="todoItem.item.edit" 
+					title="Delete"
 					class="glyphicon glyphicon-floppy-remove btn btn-sm" 
 					ng-click="todoItem.crud.remove($parent.$parent.todoList.items, todoItem.item)">
 				</button>
@@ -24,7 +28,8 @@
 	</form>
 	<div class="col-sm-12" style="margin: 0 10px 0;">
 		<todo-list items="todoItem.item.subItems"
-			add-enable="todoItem.addEnable">
+			add-enable="todoItem.addEnable"
+			ng-if="todoItem.item.subItems.length">
 		</todo-list>
 	</div>
 </div>
