--- a/TodoAppA1/app/app.component.html
+++ b/TodoAppA1/app/app.component.html
@@ -1,6 +1,6 @@
-﻿<header class="cotainer-fluid">
-	<div class="cotainer">
-		<nav class="navbar navbar-default" role="navigation">
+﻿<header>
+	<nav class="navbar navbar-default" role="navigation">
+		<div class="container">
 			<div class="navbar-header">
 				<button type="button" class="navbar-toggle" ng-click="isNavCollapsed = !isNavCollapsed">
 					<span class="sr-only">Todo App</span>
@@ -16,8 +16,8 @@
 					<li><a href="#">Lists</a></li>
 				</ul>
 			</div>
-		</nav>
-	</div>
+		</div>
+	</nav>
 </header>
 <section>
 	<div class="container">
