--- a/TodoAppA1/Views/Home/Index.cshtml
+++ b/TodoAppA1/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿<link rel="stylesheet" type="text/css" href="/content/bootstrap.css" />
+<link rel="stylesheet" type="text/css" href="/content/bootstrap-theme.css" />
 <style type="text/css">
 	.list-group .list-item.active{
 		box-shadow: 0 10px 10px -4px rgba(0,0,0,.2), 0 5px 10px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
