Change ul li html structure, ui should improve alot
Currently design breaks when we add subitem.

--- a/TodoAppA1/Views/Home/Index.cshtml
+++ b/TodoAppA1/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
 
 <script src="/scripts/angular.min.js"></script>
 <script src="/scripts/angular-animate.min.js"></script>
-<script src="/scripts/angular-ui/ui-bootstrap.min.js"></script>
+<script src="/scripts/angular-ui/ui-bootstrap.js"></script>
 <script src="/scripts/angular-ui-router.min.js"></script>
 <script src="/app/app.module.js"></script>
 <script src="/app/todo-list/todo-list.component.js"></script>
@@ -16,6 +16,7 @@
 <script src="/app/todo-item/todo-item.component.js"></script>
 <script src="/app/todo-item/todo-item.controller.js"></script>
 <script src="/app/services/todo-list-helper.service.js"></script>
+<script src="/app/services/todo-api.service.js"></script>
 <script src="/app/app.controller.js"></script>
 <script src="/app/app.component.js"></script>
 <script src="/app/app.js"></script>
